force-app/main/default/objects/WorkOrder/fields/Corrective_actions__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions__c</fullName>
    <label>Corrective actions</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>