force-app/main/default/objects/WorkOrder/fields/Fix_Details__c.field-meta.xml
<CustomField>
    <fullName>Fix_Details__c</fullName>
    <label>Fix Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>