force-app/main/default/objects/WorkOrder/fields/Prevent_actions__c.field-meta.xml
<CustomField>
    <fullName>Prevent_actions__c</fullName>
    <label>Prevent actions</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>