force-app/main/default/objects/WorkOrder/fields/Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Report_Number__c</fullName>
    <displayFormat>WR-{0000000}</displayFormat>
    <label>Report Number</label>
    <type>AutoNumber</type>
</CustomField>